# nubium

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json
.claude/: settings.local.json
.claude/commands/: convo-review.md  fix-issues.md  fix.md  test-changes.md  test-matrix.md  triage-issues.md
.github/workflows/: release.yml
scripts/: test-ai-tools.ts
src/: App.tsx  globals.css  telemetry.ts  updater.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: doc-icon.icns  generate-doc-icon.sh
src-tauri/keys/: nubium.key.pub
src-tauri/src/: lib.rs  main.rs  midi.rs
src/ai/: ChatProvider.ts  DiffApply.ts  ScoreContext.ts  index.ts  presets.ts  validate.ts
src/commands/: ChangeClef.ts  ChangeDuration.ts  ChangeKeySig.ts  ChangePitch.ts  ChangeTimeSig.ts  Command.ts  CommandHistory.ts  DeleteMeasure.ts  DeleteNote.ts  DeleteSelectedMeasures.ts  InsertMeasure.ts  InsertNote.ts  InsertRest.ts  InsertTabNote.ts  OverwriteNote.ts  RemovePart.ts  SetChordSymbol.ts  SetDynamic.ts  SetHairpin.ts  SetLyric.ts  SetNavigationMark.ts  SetPartProperty.ts  SetRepeatBarline.ts  SetRepeatCount.ts  SetScoreMeta.ts  SetStemDirection.ts  SetSwing.ts  ToggleArticulation.ts  ToggleDot.ts  ToggleMute.ts  TogglePickup.ts  ToggleTie.ts  index.ts
src/components/: AISettings.tsx  ChatSidebar.tsx  CommandPalette.tsx  DraggablePanel.tsx  DynamicsPopover.tsx  KeyboardShortcuts.tsx  PanelLayout.tsx  PluginPanel.tsx  PluginViewSwitcher.tsx  ScoreCanvas.tsx  ScoreOverlay.tsx  SettingsPanel.tsx  (+4 more)
(+143 files in other folders)
