[package]
name = "notation"
version = "0.1.0"
description = "AI-native music notation editor"
authors = ["Notation Contributors"]
edition = "2021"

[lib]
name = "notation_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
